# upay-mom-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_save_endpoint.py  test_transcript_endpoint.py  vercel.json
app/: config.py  main.py
app/routers/: items.py  transcript.py
app/schemas/: transcript.py
app/services/: file_processor.py  gemini_client.py
app/services/auth/: deps.py  planner_auth.py
app/services/database/: __init__.py  meeting_service.py
app/services/planner/: dependencies.py  planner_formatter.py  planner_plan_service.py  planner_service.py  planner_task_service.py  user_service.py
tests/: conftest.py  sample_transcript.txt  test_file_processor.py  test_gemini_endpoints.py  test_integration.py  test_live.py  test_main.py  test_planner_endpoints.py  test_supabase_live.py  test_transcript.py
