[project]
name = "upay-mom-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.2",
    "google-genai>=1.48.0",
    "msgraph-sdk>=1.48.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "supabase>=2.24.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "live: marks tests that require live API connections (Gemini, Supabase)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
